x86/include/TestEngine.h


TESTENGINE_API(int32) hciSendAclFile(uint32 handle, uint16 connHandle,
                                     const char* fileName);
TESTENGINE_API(int32) hciSendAclData(uint32 handle, uint16 connHandle,
                                     const uint8 data[], uint16 length);
TESTENGINE_API(int32) hciGetAclData(uint32 handle, uint8 data[], uint32* numBytes);
TESTENGINE_API(int32) hciGetAclBytesRead(uint32 handle, uint32* numBytes);
TESTENGINE_API(int32) hciGetAclFileName(uint32 handle, char* fileName,
                                        uint32* length);
TESTENGINE_API(int32) hciGetAclState(uint32 handle, int32* state);
TESTENGINE_API(int32) hciResetAclState(uint32 handle);
TESTENGINE_API(int32) hciReset(uint32 handle);
TESTENGINE_API(int32) bccmdGetAnaXtalFtrim(uint32 handle, uint16* fTrim);
TESTENGINE_API(int32) bccmdSetAnaXtalFtrim(uint32 handle, uint16 fTrim);
TESTENGINE_API(int32) hciSniffMode(uint32 handle, uint16 connectionHandle,
                                   uint16 sniffMaxInterval, uint16 sniffMinInterval,
                                   uint16 sniffAttempt, uint16 sniffTimeout);
TESTENGINE_API(int32) hciExitSniff(uint32 handle, uint16 connectionHandle);
TESTENGINE_API(int32) hciDisconnect(uint32 handle, uint16 connectionHandle);
TESTENGINE_API(int32) hciGetConnectionHandle(uint32 handle, uint32 lap, uint8 uap,
                                             uint16 nap, uint16* connectionHandle);
TESTENGINE_API(int32) hciConnectionStatus(uint32 handle, uint16 connectionHandle);
TESTENGINE_API(int32) hciEnableDeviceUnderTestMode(uint32 handle);
TESTENGINE_API(int32) hciGetLinkQuality(uint32 handle, uint16 connectionHandle,
                                        uint8* quality);
TESTENGINE_API(int32) hciReadBdAddr(uint32 handle, char* bdAddr);
TESTENGINE_API(int32) hciReadLocalVersionInformation(uint32 handle,
                                                     uint32 versionInfo[]);
TESTENGINE_API(int32) hciReadRemoteVersionInformation(uint32 handle,
                                                      uint16 connectionHandle,
                                                      uint32 versionInfo[]);
TESTENGINE_API(int32) hciReadRemoteNameRequest(uint32 handle, uint32 lap, uint8 uap,
                                               uint16 nap, uint8 pageScanRepMode,
                                               uint8 pageScanOffset,
                                               uint16 clockOffset, char* remoteName);
TESTENGINE_API(int32) dmRegisterReq(uint32 handle);
TESTENGINE_API(int32) dmSlave(uint32 handle);
TESTENGINE_API(int32) dmEnableDeviceUnderTestMode(uint32 handle);
TESTENGINE_API(int32) dmWritePageScanActivity(uint32 handle, uint16 interval,
                                              uint16 window);
TESTENGINE_API(int32) dmWriteInquiryScanActivity(uint32 handle,
                                                 uint16 interval,
                                                 uint16 window);
TESTENGINE_API(int32) dmWriteScanEnable(uint32 handle, uint8 scanEnable);
TESTENGINE_API(int32) dmSetEventFilterAutoacceptConnection(uint32 handle);
TESTENGINE_API(int32) bccmdBc3PsuTrim(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdChargerPsuTrim(uint32 handle, uint16 trim);
TESTENGINE_API(int32) bccmdBc3BuckReg(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdPsuSmpsEnable(uint32 handle, uint16 reg);
TESTENGINE_API(int32) bccmdBc3MicEn(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdPsuHvLinearEnable(uint32 handle, uint16 reg);
TESTENGINE_API(int32) bccmdBc3Led0(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdLedEnable(uint32 handle, uint16 led, uint16 state);
TESTENGINE_API(int32) bccmdLed0Enable(uint32 handle, uint16 state);
TESTENGINE_API(int32) bccmdBc3Led1(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdLed1Enable(uint32 handle, uint16 state);
TESTENGINE_API(int32) bccmdChargerStatus(uint32 handle, uint16* state);
TESTENGINE_API(int32) bccmdChargerDisable(uint32 handle, uint16 state);
TESTENGINE_API(int32) bccmdChargerSuppressLed0(uint32 handle, uint16 state);
TESTENGINE_API(int32) hciCreateConnectionNoWait(uint32 handle, uint32 lap, uint8 uap,
                                                uint16 nap, uint16 pktType,
                                                uint8 pageScanRepMode,
                                                uint8 pageScanMode,
                                                uint16 clockOffset,
                                                uint8 allowRoleSwitch);
TESTENGINE_API(int32) hciWriteAuthenticationEnable(uint32 handle, uint8 enable);
TESTENGINE_API(int32) hciLinkKeyRequestNegativeReply(uint32 handle, uint32 lap,
                                                     uint8 uap, uint16 nap);
TESTENGINE_API(int32) hciWaitForConnectionComplete(uint32 handle, uint16* connHandle);
TESTENGINE_API(int32) hciWaitForLinkKeyRequest(uint32 handle, uint32* lap, uint8* uap,
                                               uint16* nap);
TESTENGINE_API(int32) hciWaitForPinCodeRequest(uint32 handle, uint32* lap, uint8* uap,
                                               uint16* nap);
TESTENGINE_API(int32) hciWaitForEncryptionChange(uint32 handle, uint8* enable);
TESTENGINE_API(int32) hciPinCodeRequestReply(uint32 handle, uint32 lap, uint8 uap,
                                             uint16 nap, uint8 pinCodeLength,
                                             uint8 pinCode[]);