x86/include/TestEngineAPI.cs


        [DllImport("TestEngine.dll", EntryPoint="hciSendAclFile",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciSendAclFile(uint handle, ushort connHandle, String fileName);

        [DllImport("TestEngine.dll", EntryPoint="hciSendAclData",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciSendAclData(uint handle, ushort connHandle, byte [] data, ushort length);

        [DllImport("TestEngine.dll", EntryPoint="hciGetAclData",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciGetAclData(uint handle, byte [] data, out uint numBytes);

        [DllImport("TestEngine.dll", EntryPoint="hciGetAclBytesRead",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciGetAclBytesRead(uint handle, out uint numBytes);

        [DllImport("TestEngine.dll", EntryPoint="hciGetAclFileName",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciGetAclFileName(uint handle, StringBuilder fileName, out uint length);

        [DllImport("TestEngine.dll", EntryPoint="hciGetAclState",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciGetAclState(uint handle, out int state);

        [DllImport("TestEngine.dll", EntryPoint="hciResetAclState",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciResetAclState(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="hciReset",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciReset(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="bccmdGetAnaXtalFtrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdGetAnaXtalFtrim(uint handle, out ushort fTrim);

        [DllImport("TestEngine.dll", EntryPoint="bccmdSetAnaXtalFtrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdSetAnaXtalFtrim(uint handle, ushort fTrim);

        [DllImport("TestEngine.dll", EntryPoint="hciSniffMode",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciSniffMode(uint handle, ushort connectionHandle, ushort sniffMaxInterval, ushort sniffMinInterval, ushort sniffAttempt, ushort sniffTimeout);

        [DllImport("TestEngine.dll", EntryPoint="hciExitSniff",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciExitSniff(uint handle, ushort connectionHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciDisconnect",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciDisconnect(uint handle, ushort connectionHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciGetConnectionHandle",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciGetConnectionHandle(uint handle, uint lap, byte uap, ushort nap, out ushort connectionHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciConnectionStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciConnectionStatus(uint handle, ushort connectionHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciEnableDeviceUnderTestMode",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciEnableDeviceUnderTestMode(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="hciGetLinkQuality",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciGetLinkQuality(uint handle, ushort connectionHandle, out byte quality);

        [DllImport("TestEngine.dll", EntryPoint="hciReadBdAddr",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciReadBdAddr(uint handle, StringBuilder bdAddr);

        [DllImport("TestEngine.dll", EntryPoint="hciReadLocalVersionInformation",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciReadLocalVersionInformation(uint handle, uint [] versionInfo);

        [DllImport("TestEngine.dll", EntryPoint="hciReadRemoteVersionInformation",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciReadRemoteVersionInformation(uint handle, ushort connectionHandle, uint [] versionInfo);

        [DllImport("TestEngine.dll", EntryPoint="hciReadRemoteNameRequest",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciReadRemoteNameRequest(uint handle, uint lap, byte uap, ushort nap, byte pageScanRepMode, byte pageScanOffset, ushort clockOffset, StringBuilder remoteName);

        [DllImport("TestEngine.dll", EntryPoint="dmRegisterReq",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int dmRegisterReq(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="dmSlave",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int dmSlave(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="dmEnableDeviceUnderTestMode",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int dmEnableDeviceUnderTestMode(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="dmWritePageScanActivity",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int dmWritePageScanActivity(uint handle, ushort interval, ushort window);

        [DllImport("TestEngine.dll", EntryPoint="dmWriteInquiryScanActivity",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int dmWriteInquiryScanActivity(uint handle, ushort interval, ushort window);

        [DllImport("TestEngine.dll", EntryPoint="dmWriteScanEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int dmWriteScanEnable(uint handle, byte scanEnable);

        [DllImport("TestEngine.dll", EntryPoint="dmSetEventFilterAutoacceptConnection",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int dmSetEventFilterAutoacceptConnection(uint handle);

        [DllImport("TestEngine.dll", EntryPoint="bccmdBc3PsuTrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdBc3PsuTrim(uint handle, ushort data);

        [DllImport("TestEngine.dll", EntryPoint="bccmdChargerPsuTrim",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdChargerPsuTrim(uint handle, ushort trim);

        [DllImport("TestEngine.dll", EntryPoint="bccmdBc3BuckReg",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdBc3BuckReg(uint handle, ushort data);

        [DllImport("TestEngine.dll", EntryPoint="bccmdPsuSmpsEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdPsuSmpsEnable(uint handle, ushort reg);

        [DllImport("TestEngine.dll", EntryPoint="bccmdBc3MicEn",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdBc3MicEn(uint handle, ushort data);

        [DllImport("TestEngine.dll", EntryPoint="bccmdPsuHvLinearEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdPsuHvLinearEnable(uint handle, ushort reg);

        [DllImport("TestEngine.dll", EntryPoint="bccmdBc3Led0",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdBc3Led0(uint handle, ushort data);

        [DllImport("TestEngine.dll", EntryPoint="bccmdLedEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdLedEnable(uint handle, ushort led, ushort state);

        [DllImport("TestEngine.dll", EntryPoint="bccmdLed0Enable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdLed0Enable(uint handle, ushort state);

        [DllImport("TestEngine.dll", EntryPoint="bccmdBc3Led1",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdBc3Led1(uint handle, ushort data);

        [DllImport("TestEngine.dll", EntryPoint="bccmdLed1Enable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdLed1Enable(uint handle, ushort state);

        [DllImport("TestEngine.dll", EntryPoint="bccmdChargerStatus",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdChargerStatus(uint handle, out ushort state);

        [DllImport("TestEngine.dll", EntryPoint="bccmdChargerDisable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdChargerDisable(uint handle, ushort state);

        [DllImport("TestEngine.dll", EntryPoint="bccmdChargerSuppressLed0",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int bccmdChargerSuppressLed0(uint handle, ushort state);

        [DllImport("TestEngine.dll", EntryPoint="hciCreateConnectionNoWait",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciCreateConnectionNoWait(uint handle, uint lap, byte uap, ushort nap, ushort pktType, byte pageScanRepMode, byte pageScanMode, ushort clockOffset, byte allowRoleSwitch);

        [DllImport("TestEngine.dll", EntryPoint="hciWriteAuthenticationEnable",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWriteAuthenticationEnable(uint handle, byte enable);

        [DllImport("TestEngine.dll", EntryPoint="hciLinkKeyRequestNegativeReply",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciLinkKeyRequestNegativeReply(uint handle, uint lap, byte uap, ushort nap);

        [DllImport("TestEngine.dll", EntryPoint="hciWaitForConnectionComplete",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWaitForConnectionComplete(uint handle, out ushort connHandle);

        [DllImport("TestEngine.dll", EntryPoint="hciWaitForLinkKeyRequest",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWaitForLinkKeyRequest(uint handle, out uint lap, out byte uap, out ushort nap);

        [DllImport("TestEngine.dll", EntryPoint="hciWaitForPinCodeRequest",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWaitForPinCodeRequest(uint handle, out uint lap, out byte uap, out ushort nap);

        [DllImport("TestEngine.dll", EntryPoint="hciWaitForEncryptionChange",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciWaitForEncryptionChange(uint handle, out byte enable);

        [DllImport("TestEngine.dll", EntryPoint="hciPinCodeRequestReply",
                CharSet=charset, CallingConvention=calling_convention)]
        public static extern int hciPinCodeRequestReply(uint handle, uint lap, byte uap, ushort nap, byte pinCodeLength, byte [] pinCode);
